--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "gh-pages": "^3.2.6",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "ajv": "^6.12.6",
